@@ -1096,21 +1096,23 @@ BEGIN
     LTEXT           "&Scatter Angle",IDC_STATIC,7,79,63,8
 END
 
-IDD_PROPTRIGGER_VISUALS DIALOGEX 0, 0, 125, 107
+IDD_PROPTRIGGER_VISUALS DIALOGEX 0, 0, 125, 131
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     CONTROL         "&Visible",7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,6,36,10
     LTEXT           "S&hape",IDC_STATIC,7,21,22,8
     COMBOBOX        1503,37,18,81,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Star Radius",IDC_STATIC,7,36,38,8
-    EDITTEXT        IDC_STAR_RADIUS_EDIT,64,33,40,14,ES_AUTOHSCROLL
-    LTEXT           "Rotation",IDC_STATIC,7,51,28,8
-    EDITTEXT        IDC_ROTATION_EDIT,64,49,40,14,ES_AUTOHSCROLL
-    LTEXT           "Material",IDC_STATIC,7,80,26,8
-    COMBOBOX        IDC_MATERIAL_COMBO,7,88,111,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_RINGSPEED_EDIT,64,65,40,14,ES_AUTOHSCROLL
-    LTEXT           "Animation Speed",IDC_STATIC,7,67,54,8
+    LTEXT           "Star Radius",IDC_STATIC,7,56,38,8
+    EDITTEXT        IDC_STAR_RADIUS_EDIT,64,53,40,14,ES_AUTOHSCROLL
+    LTEXT           "Rotation",IDC_STATIC,7,71,28,8
+    EDITTEXT        IDC_ROTATION_EDIT,64,69,40,14,ES_AUTOHSCROLL
+    LTEXT           "Material",IDC_STATIC,7,100,26,8
+    COMBOBOX        IDC_MATERIAL_COMBO,7,109,111,60,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_RINGSPEED_EDIT,64,85,40,14,ES_AUTOHSCROLL
+    LTEXT           "Animation Speed",IDC_STATIC,7,87,54,8
+    LTEXT           "Wire Thickness",IDC_STATIC,7,40,50,8
+    EDITTEXT        IDC_STAR_THICKNESS_EDIT,64,39,40,12,ES_AUTOHSCROLL
 END
 
 IDD_PROPTRIGGER_STATE DIALOGEX 0, 0, 125, 34
@@ -1861,6 +1863,11 @@ BEGIN
         RIGHTMARGIN, 303
         TOPMARGIN, 7
         BOTTOMMARGIN, 107
+    END
+
+    IDD_PROPTRIGGER_VISUALS, DIALOG
+    BEGIN
+        BOTTOMMARGIN, 127
     END
 
     IDD_PROPKICKER_VISUALS, DIALOG
